--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -14,8 +14,9 @@
 %>
 
 <footer class="footer pt-3">
-  <p class="text-center mb-1"><%= t("footer.powered_by", href: link_to(t("greenlight"), "https://bigbluebutton.org/2018/07/09/greenlight-2-0/", target: "_blank", rel: "noopener")).html_safe %> <%= Greenlight::Application::VERSION %>
-  <%= t("footer.powered_by", href: link_to(t("bigbluebutton"), "https://bigbluebutton.org/", target: "_blank", rel: "noopener")).html_safe %> </p>
+  <p class="text-center mb-1"><%= t("custom.footer1", href: link_to(t("greenlight"), "https://bigbluebutton.org/2018/07/09/greenlight-2-0/", target: "_blank", rel: "noopener")).html_safe %> <%= Greenlight::Application::VERSION %>
+  <%= t("custom.footer2", href: link_to(t("bigbluebutton"), "https://bigbluebutton.org/", target: "_blank", rel: "noopener")).html_safe %> </p>
+  <p class="text-center mb-1"><%= t("custom.footer_stemp").html_safe %> </p>
 </footer>
 
 <%= render "shared/components/cookie_warning" %>
