--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -14,7 +14,7 @@
 %>
 
 <footer class="footer pt-3">
-  <p class="text-center mb-1"><%= t("custom.footer1", href: link_to(t("greenlight"), "https://bigbluebutton.org/2018/07/09/greenlight-2-0/", target: "_blank", rel: "noopener")).html_safe %> <%= Greenlight::Application::VERSION %>
+  <p class="text-center mb-1"><%= t("custom.footer1", href: link_to(t("greenlight"), "https://bigbluebutton.org/2018/07/09/greenlight-2-0/", target: "_blank", rel: "noopener")).html_safe %>
   <%= t("custom.footer2", href: link_to(t("bigbluebutton"), "https://bigbluebutton.org/", target: "_blank", rel: "noopener")).html_safe %> </p>
   <p class="text-center mb-1"><%= t("custom.footer_stemp").html_safe %> </p>
 </footer>
