--- a/app/views/rooms/cant_create_rooms.html.erb
+++ b/app/views/rooms/cant_create_rooms.html.erb
@@ -60,13 +60,10 @@
                             <div class="card-body d-flex flex-column justify-content-center align-items-center">
                             <ul class="list-group w-75 text-center">
                                 <li class="list-group-item active"><%= t("room.no_room.recent_rooms") %></li>
-                                <% @recent_rooms.each do |room| %>
+                                <% current_user.shared_rooms.each do |room| %>
                                     <%= link_to room_path(room), class: "list-group-item list-group-item-action dropdown-item"  do %>
                                         <%= room.owner.name + " " + room.name %>
                                     <% end %>
-                                <% end %>
-                                <% if @recent_rooms.count == 0 %>
-                                    <li class="list-group-item"><%= t("room.no_room.no_recent_rooms") %></li>
                                 <% end %>
                             </ul>
                             </div>
@@ -78,8 +75,24 @@
     </div>
 </div>
 
+#<% if shared_access_allowed %>
+#        <% current_user.shared_rooms.each do |room| %>
+#          <div class="col-lg-4 col-md-6 col-sm-12">
+#            <%= link_to room do %>
+#              <%= render "rooms/components/shared_room_block", room: room %>
+#            <% end %>
+#          </div>
+#        <% end %>
+#<% end %>
 
-<% if shared_access_allowed %>
-  <%= render "shared/modals/share_room_modal" %>
-  <%= render "shared/modals/remove_access_modal" %>
-<% end %>
+#<ul class="list-group w-75 text-center">
+#<li class="list-group-item active"><%= t("room.no_room.recent_rooms") %></li>
+#<% @recent_rooms.each do |room| %>
+#    <%= link_to room_path(room), class: "list-group-item list-group-item-action dropdown-item"  do %>
+#        <%= room.owner.name + " " + room.name %>
+#    <% end %>
+#<% end %>
+#<% if @recent_rooms.count == 0 %>
+#    <li class="list-group-item"><%= t("room.no_room.no_recent_rooms") %></li>
+#<% end %>
+#</ul>
