--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -13,8 +13,7 @@
 # with BigBlueButton; if not, see <http://www.gnu.org/licenses/>.
 %>
 
-
-<div id="cant-create-room-wrapper" class="background h-100 cant-create-room-wrapper">
+<div class="background pb-1">
     <div class="container h-100">
         <div class="row h-100 align-items-center">
             <div class="col-12">
