--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -13,7 +13,7 @@
 # with BigBlueButton; if not, see <http://www.gnu.org/licenses/>.
 %>
 
-<div class="background pb-1">
+<div id="cant-create-room-wrapper" class="background h-100 cant-create-room-wrapper">
     <div class="container h-100">
         <div class="row h-100 align-items-center">
             <div class="col-12">
@@ -73,9 +73,7 @@
                 </div>
             </div>
         </div>
-    </div>
-</div>
-
+  
 
 <% exceeds_limit = current_room_exceeds_limit(@room)%>
 <% if exceeds_limit%>
@@ -177,3 +175,5 @@
   <%= render "shared/modals/remove_access_modal" %>
 <% end %>
 
+</div>
+</div>
