--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -13,7 +13,7 @@
 # with BigBlueButton; if not, see <http://www.gnu.org/licenses/>.
 %>
 
-<div class="background pb-1">
+<div class="container">
     <div class="container">
         <div class="row align-items-center">
             <div class="col-12">
@@ -77,10 +77,6 @@
 </div>
 
   
-
-
-
-
 <% exceeds_limit = current_room_exceeds_limit(@room)%>
 <% if exceeds_limit%>
   <div class="alert alert-danger alert-dismissible text-center mb-0">
