--- a/app/views/rooms/cant_create_rooms.html.erb
+++ b/app/views/rooms/cant_create_rooms.html.erb
@@ -15,66 +15,100 @@
 # with BigBlueButton; if not, see <http://www.gnu.org/licenses/>.
 %>
 
-<div id="cant-create-room-wrapper" class="background h-100 cant-create-room-wrapper">
-    <div class="container h-100">
-        <div class="row h-100 align-items-center">
-            <div class="col-12">
-                <div class="row">
-                    <div class="col-5">
-                        <div class="card card-profile h-100">
-                            <div class="card-header bg-primary h-50"></div>
-                            <div class="card-body text-center">
-                                <% if current_user.image.blank? %>
-                                    <span class="avatar avatar-xxxl card-profile-img bg-primary"><%= current_user.name.first %></span>
-                                <% else %>
-                                    <%= image_tag(current_user.image, class: "avatar avatar-xxxl card-profile-img") %>
-                                <% end %>
-                                <h2 class="mb-3"><%= current_user.name %></h2>
-                                <%= link_to edit_user_path(current_user), class: "btn btn-outline-primary mt-2" do %>
-                                    <i class="dropdown-icon fas fa-id-card mr-3"></i><%= t("room.no_room.edit_profile") %>
-                                <% end %>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-7">
-                        <div class="card h-100">
-                            <div class="card-status bg-primary"></div>
-                            <div class="card-header cant-create-rooms-title">
-                                <h3 class="card-title"><%= t("room.no_room.title") %></h3>
-                            </div>
-                            <div class="card-body d-flex flex-column justify-content-center align-items-center">
-                                <p class="w-75"><%= t("room.no_room.description") %></p>
-                                <%= form_for(:join_room, url: join_room_path, html: {class: "w-75"}) do |f| %>
-                                    <div class="input-icon mb-2">
-                                        <span class="input-icon-addon">
-                                            <i class="fas fa-link"></i>
-                                        </span>
-                                        <%= f.text_field :url, class: "form-control", value: "", placeholder: t("room.no_room.placeholder"), required: "" %>
-                                    </div>
-                                    <div class="mt-4">
-                                        <%= f.submit t("room.no_room.go_to"), class:"btn btn-primary btn-block" %>
-                                    </div>
-                                <% end %>
-                            </div>
-                            <hr class="mt-0 mb-0">
-                            <div class="card-body d-flex flex-column justify-content-center align-items-center">
-                            <ul class="list-group w-75 text-center">
-                                <li class="list-group-item active"><%= t("room.no_room.recent_rooms") %></li>
-                                <% @recent_rooms.each do |room| %>
-                                    <%= link_to room_path(room), class: "list-group-item list-group-item-action dropdown-item"  do %>
-                                        <%= room.owner.name + " " + room.name %>
-                                    <% end %>
-                                <% end %>
-                                <% if @recent_rooms.count == 0 %>
-                                    <li class="list-group-item"><%= t("room.no_room.no_recent_rooms") %></li>
-                                <% end %>
-                            </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+
+<% exceeds_limit = current_room_exceeds_limit(@room)%>
+<% if exceeds_limit%>
+  <div class="alert alert-danger alert-dismissible text-center mb-0">
+    <%= t("room.room_limit_exceeded", difference: @diff) %>
+  </div>
+<% end %>
+<div class="background pb-1">
+  <div class="container">
+    <div class="row pt-7 pt-sm-9">
+      <div class="col-lg-8 col-sm-12">
+        <div id="room-title" class="display-3 form-inline <%= 'edit_hover_class' if current_user.main_room != @room %>" data-path="<%= update_settings_path(@room) %>">
+          <% if current_user.main_room == @room %>
+            <h1 contenteditable=false id="user-text" class="display-3 text-left mb-3 font-weight-400"><%= @room.name %></h1>
+            <a class="disable-click"><i class="fas fa-home align-top home-indicator ml-2"></i></a>
+          <% else %>
+            <h1 contenteditable=false id="user-text" class="display-3 text-left mb-3 font-weight-400"><%= @room.name %></h1>
+            <a><i id="edit-room" class="fa fa-edit align-top home-indicator ml-2" data-edit-room="<%= @room.uid %>"></i></a>
+          <% end %>
         </div>
+        <h4 class="text-left mb-6"><%= @room.sessions %> <%= t("room.sessions") %> | <%= @recordings.length %> <%= t("room.recordings") %></h4>
+        <% unless exceeds_limit %>
+          <label class="form-label"><%= t("room.invite_participants") %></label>
+          <div class="row">
+            <div class="col-lg-7 col-md-12 mt-2">
+              <div class="input-icon invite-link-input">
+                <span class="input-icon-addon">
+                  <i class="fas fa-link"></i>
+                </span>
+                <input id="invite-url" type="text" class="form-control w-100" value="<%= request.base_url + @room.invite_path %>" readonly="">
+              </div>
+            </div>
+            <div class="col-lg-5 col-md-12">
+              <div class="row">
+                <div class="col-sm-6">
+                  <a id="copy" class="btn btn-primary btn-block mt-2">
+                    <i class="fas fa-copy"></i>
+                    <%= t("copy") %>
+                  </a>
+                </div>
+                <div class="col-sm-6 pl-0">
+                  <% if Rails.configuration.enable_google_calendar_button %>
+                    <a href="<%= google_calendar_path %>" target="__blank" id="schedule" class="btn btn-primary btn-block mt-2">
+                      <i class="fas fa-calendar-plus"></i>
+                      <%= t("add_to_google_calendar") %>
+                    </a>
+                  <% end %>
+                </div>
+              </div>
+            </div>
+          </div>
+        <% end %>
+      </div>
+      <div class="offset-lg-1 col-lg-3 col-sm-12 force-bottom mt-5">
+        <% if @room_running %>
+          <%= button_to t("room.join"), room_path(@room), class: "btn btn-primary btn-block px-7 start-button float-right", "data-disable": "" %>
+        <% else %>
+          <% unless exceeds_limit %>
+            <%= button_to t("room.start"), start_room_path(@room), class: "btn btn-primary btn-block px-7 start-button float-right", "data-disable": "" %>
+          <% end %>
+        <% end %>
+      </div>
     </div>
+
+    <div id="room_block_container" class="row pt-7 pb-5">
+      <% current_user.ordered_rooms.each do |room| %>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <%= link_to room do %>
+            <%= render "rooms/components/room_block", room: room %>
+          <% end %>
+        </div>
+      <% end %>
+            
+      <% if shared_access_allowed %>
+        <% current_user.shared_rooms.each do |room| %>
+          <div class="col-lg-4 col-md-6 col-sm-12">
+            <%= link_to room do %>
+              <%= render "rooms/components/shared_room_block", room: room %>
+            <% end %>
+          </div>
+        <% end %>
+      <% end %>
+      
+    </div>
+  </div>
 </div>
 
+<%= render "shared/sessions", recordings: @recordings, pagy: @pagy, only_public: false, shared_room: @shared_room, user_recordings: false, title: t("room.recordings")%>
+
+<%= render "shared/modals/delete_room_modal" %>
+
+<%= render "shared/modals/create_room_modal" %>
+
+<% if shared_access_allowed %>
+  <%= render "shared/modals/share_room_modal" %>
+  <%= render "shared/modals/remove_access_modal" %>
+<% end %>
