--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -52,6 +52,12 @@
                     <%= t("copy") %>
                   </a>
                 </div>
+                <div class="col-sm-6">
+                  <a id="copy" class="btn btn-primary btn-block mt-2">
+                    <i class="fas fa-copy"></i>
+                    <%= t("copy") %>
+                  </a>
+                </div>
                 <div class="col-sm-6 pl-0">
                   <% if Rails.configuration.enable_google_calendar_button %>
                     <a href="<%= google_calendar_path %>" target="__blank" id="schedule" class="btn btn-primary btn-block mt-2">
