--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -53,10 +53,11 @@
                   </a>
                 </div>
                 <div class="col-sm-6">
-                  <a id="copy" class="btn btn-primary btn-block mt-2">
-                    <i class="fas fa-copy"></i>
-                    <%= t("copy") %>
-                  </a>
+                  <div id="invite-user" class="btn btn-primary btn-block mt-2">
+                    <%= link_to "#inviteModal", :class => "btn btn-primary", "data-toggle": "modal" do %>
+                    <%= t("administrator.users.invite") %> <i class="fas fa-paper-plane ml-1"></i>
+                  <% end %>
+                  </div>
                 </div>
                 <div class="col-sm-6 pl-0">
                   <% if Rails.configuration.enable_google_calendar_button %>
