--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -52,10 +52,10 @@
                     <%= t("copy") %>
                   </a>
                 </div>
-                <div class="col-sm-6">
-                  <div id="invite-user" class="btn btn-primary btn-block mt-2">
-                    <%= link_to "#inviteModal", :class => "btn btn-primary", "data-toggle": "modal" do %>
-                    <%= t("administrator.users.invite") %> <i class="fas fa-paper-plane ml-1"></i>
+                  <div class="col-sm-6">
+                  <div id="invite-user" class="d-inline-block float-right ml-3">
+                  <%= link_to "#inviteModal", :class => "btn btn-primary", "data-toggle": "modal" do %>
+                  <%= t("administrator.users.invite") %> <i class="fas fa-paper-plane ml-1"></i>
                   <% end %>
                   </div>
                 </div>
