--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -52,12 +52,11 @@
                     <%= t("copy") %>
                   </a>
                 </div>
-                  <div class="col-sm-6">
-                  <div id="invite-user" class="d-inline-block float-right ml-3">
-                  <%= link_to "#inviteModal", :class => "btn btn-primary", "data-toggle": "modal" do %>
-                  <%= t("administrator.users.invite") %> <i class="fas fa-paper-plane ml-1"></i>
-                  <% end %>
-                  </div>
+                <div class="col-sm-6">
+                  <a id="copy" class="btn btn-primary btn-block mt-2">
+                    <i class="fas fa-copy"></i>
+                    <%= t("copy") %>
+                  </a>
                 </div>
                 <div class="col-sm-6 pl-0">
                   <% if Rails.configuration.enable_google_calendar_button %>
